# PixlEngine

./: CMakeLists.txt
include/core/: Application.h  Logger.h
include/ecs/: System.h  SystemManager.cpp  SystemManager.h
include/graphics/: Camera.h  Mesh.h  Mesh.inl  RenderState.h  Renderer.h  Renderer.inl  Shader.h  Window.h
include/graphics/objects/: Buffer.h  VertexArray.h
include/input/: InputManager.h
include/math/: Color.h
include/utils/: ColorUtils.h  Logger.h  MeshGenerator.h
include/voxelEngine/: CameraController.h  ChunkScene.h
include/voxelEngine/voxelWorld/chunk/: Chunk.h  ChunkMesh.h  IVoxelStorage.h  VoxelChunk.h
include/voxelEngine/voxelWorld/generation/: FlatTerrainGenerator.h  ITerrainGenerator.h  NaturalTerrainGenerator.h
include/voxelEngine/voxelWorld/storage/: DenseVoxelStorage.h  MapChunkStorage.h  PaletteVoxelStorage.h  VoxelArray.h
include/voxelEngine/voxelWorld/voxel/: Voxel.h  VoxelArray.h  VoxelType.h
include/voxelEngine/voxelWorld/world/: BlockPlacer.h  ChunkRenderer.h  IChunkStorage.h  TextureColorPalette.h  VoxelRaycaster.h  VoxelWorld.h  World.h  WorldInteractor.h
resources/shaders/: chunk.frag  chunk.vert
src/: main.cpp
src/core/: Application.cpp  Color.cpp  Logger.cpp
src/graphics/: Camera.cpp  Mesh.cpp  RenderState.cpp  Renderer.cpp  Shader.cpp  Window.cpp
src/graphics/objects/: Buffer.cpp  VertexArray.cpp
src/input/: InputManager.cpp
src/math/: Color.cpp
src/utils/: ColorUtils.cpp  Logger.cpp  MeshGenerator.cpp
src/voxelEngine/: CameraController.cpp  ChunkScene.cpp
src/voxelEngine/voxelWorld/chunk/: Chunk.cpp  ChunkMesh.cpp  IVoxelStorage.cpp  VoxelChunk.cpp
src/voxelEngine/voxelWorld/generation/: FlatTerrainGenerator.cpp  NaturalTerrainGenerator.cpp
src/voxelEngine/voxelWorld/storage/: DenseVoxelStorage.cpp  MapChunkStorage.cpp  PaletteVoxelStorage.cpp  VoxelArray.cpp
src/voxelEngine/voxelWorld/utils/: DirectionUtils.cpp  DirectionUtils.h
src/voxelEngine/voxelWorld/voxel/: Voxel.cpp  VoxelType.cpp
src/voxelEngine/voxelWorld/world/: BlockPlacer.cpp  ChunkRenderer.cpp  IChunkStorage.cpp  TextureColorPalette.cpp  VoxelRaycaster.cpp  VoxelWorld.cpp  World.cpp  WorldInteractor.cpp  WorldRenderer.cpp
